[IMP] mass_mailing: full height and width
Before Commit :
-Editing mass mailings was difficult as the window
 to design the email is too small.

After Commit :
- Now full width and height available to ease edition
  of mass mailing.

task-id: 2207637

--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -43,3 +43,40 @@
     }
 }
 
+
+@media only screen and (min-width: 1200px) and (max-width: 1600px) {
+    .o_mail_body 
+    {
+        width: 106%;
+        margin-top: -15px;
+        margin-left: -32px;
+    }
+
+
+    .mailing_form_view
+    {
+    .o_notebook_body
+        {
+            margin-bottom: -45px;
+        }
+    }
+}
+
+@media only screen and (min-width: 1601px) and (max-width: 2800px)
+{
+    .o_mail_body
+    {
+       width: 102.83%;
+        margin-top: -15px;
+        margin-left: -14px;
+    }
+
+    .mailing_form_view
+    {
+    .o_notebook_body
+        {
+            margin-bottom: -45px;
+        }
+    }
+
+}
