--- a/addons/mass_mailing/views/mailing_mailing_views.xml
+++ b/addons/mass_mailing/views/mailing_mailing_views.xml
@@ -46,7 +46,7 @@
             <field name="name">mailing.mailing.form</field>
             <field name="model">mailing.mailing</field>
             <field name="arch" type="xml">
-                <form string="Mailing">
+                <form string="Mailing" class="mailing_form_view">
                     <header style="min-height:31px;">
                         <button name="action_put_in_queue" type="object" attrs="{'invisible': [('state', 'in', ('in_queue', 'done'))]}" class="oe_highlight" string="Send"
                             confirm="This will send the email to all recipients. Do you still want to proceed ?"/>
@@ -166,7 +166,7 @@
                                 </div>
                             </div>
                         </group>
-                        <notebook>
+                        <notebook class="o_notebook_body">
                             <page string="Mail Body" name="mail_body">
                                 <field name="body_html" class="oe_read_only" widget="html"
                                     options="{'cssReadonly': 'mass_mailing.iframe_css_assets_readonly'}"/>
