[TMP] web_editor: default palette minor

--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -298,12 +298,12 @@ $o-color-palettes: (
     (
         'o-color-1': #0D6EFD,
         'o-color-2': #6C757D,
-        'o-color-3': #F8F9FA,
+        'o-color-3': #E7E9EA,
         'o-color-4': #FFFFFF,
         'o-color-5': #343a40,
 
         // Override for color combination n°3
-        'o-cc3-headings': #F8F9FA,
+        'o-cc3-headings': #E7E9EA,
         'o-cc3-text': #CCCECF,
         'o-cc3-link': #06CBFF,
         'o-cc3-btn-primary': #06CBFF,
