--- a/addons/website/static/src/scss/website.ui.scss
+++ b/addons/website/static/src/scss/website.ui.scss
@@ -48,6 +48,10 @@ body.o_connected_user {
             &[data-action="edit"], &[data-action="translate"], &.css_edit_dynamic {
                 @include button-variant($o-brand-primary, $o-brand-primary);
             }
+
+            &, &:hover, &:focus {
+                text-decoration: none;
+            }
         }
 
         .o_mobile_preview a {
