[TMP] web_editor: review presets generation

--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -355,44 +355,49 @@ $o-gray-color-palette-number: 1 !default;
 $o-color-combinations-presets: (
     (
         (
-            'bg': 'o-color-4',
+            'bg': #fff,
             'text': null,
             'headings': 'o-color-1',
             'link': 'o-color-1',
             'btn-primary': 'o-color-1',
             'btn-secondary': 'o-color-2',
+            'btn-outline-primary': null,
         ),
         (
             'bg': 'o-color-3',
             'text': null,
-            'headings': null,
+            'headings': 'o-color-1',
             'link': 'o-color-1',
             'btn-primary': 'o-color-1',
             'btn-secondary': 'o-color-2',
+            'btn-outline-primary': null,
         ),
         (
             'bg': 'o-color-2',
             'text': null,
-            'headings': 'o-color-3',
-            'link': 'o-color-1',
+            'headings': null,
+            'link': 'o-color-4',
             'btn-primary': 'o-color-1',
             'btn-secondary': 'o-color-3',
+            'btn-outline-primary': 'o-color-4',
         ),
         (
             'bg': 'o-color-1',
             'text': null,
-            'headings': 'o-color-5',
-            'link': 'o-color-1',
+            'headings':  null,
+            'link': 'o-color-5',
             'btn-primary': 'o-color-5',
             'btn-secondary': 'o-color-3',
+            'btn-outline-primary': null,
         ),
         (
             'bg': 'o-color-5',
             'text': null,
-            'headings': null,
-            'link': 'o-color-1',
+            'headings': 'o-color-4',
+            'link': 'o-color-4',
             'btn-primary': 'o-color-1',
             'btn-secondary': 'o-color-3',
+            'btn-outline-primary': 'o-color-4',
         ),
     ),
 ) !default;
