--- a/addons/web/static/src/scss/domain_selector.scss
+++ b/addons/web/static/src/scss/domain_selector.scss
@@ -17,7 +17,7 @@
             flex: 0 0 auto;
         }
 
-        > .o_domain_node_control_panel {
+        > .o_domain_node_buttons {
             @include o-position-absolute($top: 0, $bottom: 0, $right: -$o-domain-selector-panel-space);
 
             > button {
@@ -30,7 +30,7 @@
                 opacity: 0.2;
                 cursor: pointer;
 
-                &.o_domain_delete_node_button {
+                &.o_delete_node {
                     font-size: 12px;
                     padding-left: 5px;
 
@@ -44,6 +44,11 @@
 
     // Rules specific to domain parts which contain sub-domain parts
     &.o_domain_tree {
+
+        &.o_inline_tree {
+            display: inline;
+        }
+
         > .o_domain_tree_header {
             position: relative;
 
@@ -101,18 +106,20 @@
             border: 1px solid darken($o-brand-lightsecondary, 10%);
             padding: 2px 4px;
 
-            > .o_field_selector {
+            > *:not(:last-child) {
                 float: left;
                 margin-right: 4px;
-
-                > .o_field_selector_value > .o_field_selector_chain_part {
-                    border: none;
-                    font-weight: 700;
-                }
             }
+
+            > .o_field_selector > .o_field_selector_value > .o_field_selector_chain_part {
+                border: none;
+                font-weight: 700;
+            }
+
             .o_domain_leaf_operator {
                 font-style: italic;
             }
+
             .o_domain_leaf_value {
                 font-weight: 700;
             }
@@ -176,8 +183,9 @@
         transition: max-height .05s ease .05s;
     }
 
-    &.o_hover_btns, &.o_hover_add_node {
-        .o_domain_node_control_panel > button {
+    &.o_hover_delete_node,
+    &.o_hover_add_node {
+        .o_domain_node_buttons > button {
             opacity: 0.5;
             &:hover {
                 opacity: 1.0;
@@ -185,7 +193,7 @@
         }
     }
 
-    &.o_hover_btns {
+    &.o_hover_delete_node {
         background: darken(white, 3%);
     }
 
@@ -197,7 +205,7 @@
             max-height: $o-domain-animation-bar-height;
             transition: max-height .15s ease .5s;
         }
-        &.o_hover_add_inset_node::after {
+        &.o_inset::after {
             left: $o-domain-selector-indent;
         }
     }
