--- a/addons/web/static/src/scss/model_field_selector.scss
+++ b/addons/web/static/src/scss/model_field_selector.scss
@@ -3,9 +3,10 @@
     position: relative;
 
     > .o_field_selector_value {
+        align-items: center;
+        cursor: pointer;
         display: flex;
         flex-flow: row wrap;
-        align-items: center;
         height: 100%;
         min-height: 20px; // needed when there is no value in it and used standalone
         &:active, &:focus, &:active:focus {
@@ -25,10 +26,10 @@
         }
     }
     > .o_field_selector_controls {
-        @include o-position-absolute(0, 0, 1px);
-        display: flex;
         align-items: center;
         cursor: pointer;
+        display: flex;
+        @include o-position-absolute(0, 0, 1px);
     }
 
     &.o_edit_mode {
