--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -53,6 +53,7 @@ $o-base-website-values-palette: (
     'headings-font-number': 1,
     'navbar-font-number': 1,
     'buttons-font-number': 1,
+    'color-palettes-number': null, // Default to the individual variables for each color palette type
     'google-fonts': null,
     'header-template': 'logo_menu',
     'footer-template': 'products_contacts_about_us',
