--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -60,6 +60,8 @@ $-font-numbers: (
     --logo-height: #{$o-theme-navbar-logo-height};
     --fixed-logo-height: #{$o-theme-navbar-fixed-logo-height};
     --number-of-fonts: #{length($o-theme-fonts)};
+    --number-of-color-palettes: #{length($o-color-palettes) - 1}; // -1 since the last one is the user customized one
+    --color-palettes-number: #{$o-original-color-palette-number};
 }
 
 #wrapwrap {
