--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -135,6 +135,9 @@
                 <div class="ribbon-wrapper">
                     <a href="#" role="button" class="ribbon btn btn-danger">Sale</a>
                 </div>
+                <div class="ribbon-wrapper">
+                    <a href="#" role="button" class="ribbon btn btn-secondary">Sold out</a>
+                </div>
                 <a t-att-href="product_href" class="d-block h-100" itemprop="url">
                     <span t-field="product.image_1920"
                         t-options="{'widget': 'image', 'preview_image': 'image_1024' if product_image_big else 'image_256'}"
