--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -136,7 +136,7 @@
                     <a href="#" role="button" class="ribbon btn btn-danger">Sale</a>
                 </div>
                 <div class="ribbon-wrapper">
-                    <a href="#" role="button" class="ribbon btn btn-secondary">Sold out</a>
+                    <a href="#" role="button" class="ribbon btn" style="background-color: #6C757C; color: #FAFAFB;">Sold out</a>
                 </div>
                 <a t-att-href="product_href" class="d-block h-100" itemprop="url">
                     <span t-field="product.image_1920"
@@ -175,7 +175,7 @@
             <t t-set="product_variant_id" t-value="product._get_first_possible_variant_id()"/>
             <input name="product_id" t-att-value="product_variant_id" type="hidden"/>
             <t t-if="product_variant_id">
-                <a href="#" role="button" id="cart_json" class="btn btn-secondary a-submit" aria-label="Shopping cart" title="Shopping cart">
+                <a href="#" role="button" id="cart_json" aria-label="Shopping cart" title="Shopping cart" t-attf-class="btn btn-secondary a-submit #{(qty > combination.virtual_available || combination.virtual_available&lt;1 || qty&lt;1) ? 'd-none' : ''">
                     <span class="fa fa-shopping-cart"/>
                 </a>
             </t>
@@ -456,9 +456,11 @@
 
     <template id="product" name="Product" track="1">
 
-        <t t-set="combination" t-value="product._get_first_possible_combination()"/>
-        <t t-set="combination_info" t-value="product._get_combination_info(combination, add_qty=add_qty or 1, pricelist=pricelist)"/>
-        <t t-set="product_variant" t-value="product.env['product.product'].browse(combination_info['product_id'])"/>
+        <t t-debug="pdb">
+            <t t-set="combination" t-value="product._get_first_possible_combination()"/>
+            <t t-set="combination_info" t-value="product._get_combination_info(combination, add_qty=add_qty or 1, pricelist=pricelist)"/>
+            <t t-set="product_variant" t-value="product.env['product.product'].browse(combination_info['product_id'])"/>
+        </t>
 
         <t t-call="website.layout">
             <t t-set="additional_title" t-value="product.name" />
