--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -154,6 +154,9 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         width: 120px;
         cursor: default;
     }
+    .ribbon-wrapper-sold-out {
+        display: none;
+    }
 }
 
 // Options relative to where the product card is put
@@ -169,7 +172,7 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
     }
 
     // Enable product promo ribbon
-    &.oe_ribbon_promo .ribbon-wrapper {
+    &.oe_ribbon_sold .ribbon-wrapper.ribbon-wrapper-sold-out {
         display: block;
     }
 }
