--- a/addons/account/wizard/account_payment_register_views.xml
+++ b/addons/account/wizard/account_payment_register_views.xml
@@ -9,7 +9,8 @@
                 <form string="Register Payment">
                     <!-- Invisible fields -->
                     <field name="line_ids" invisible="1"/>
-                    <field name="wizard_mode" invisible="1" force_save="1"/>
+                    <field name="can_edit_wizard" invisible="1" force_save="1"/>
+                    <field name="can_group_payments" invisible="1" force_save="1"/>
                     <field name="payment_type" invisible="1" force_save="1"/>
                     <field name="partner_type" invisible="1" force_save="1"/>
                     <field name="source_amount" invisible="1" force_save="1"/>
@@ -31,16 +32,16 @@
                                    required="1"
                                    attrs="{'invisible': [('hide_payment_method', '=', True)]}"/>
                             <field name="partner_bank_id"
-                                   attrs="{'invisible': ['|', ('show_partner_bank_account', '=', False), '|', ('wizard_mode', 'not in', ('single_line', 'single_batch')), '&amp;', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', False)],
-                                           'required': [('require_partner_bank_account', '=', True), '|', ('wizard_mode', '=', 'single_line'), '|', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', True)]}"/>
+                                   attrs="{'invisible': ['|', ('show_partner_bank_account', '=', False), '|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)],
+                                           'required': [('require_partner_bank_account', '=', True), ('can_edit_wizard', '=', True), '|', ('can_group_payments', '=', False), ('group_payment', '=', False)]}"/>
                             <field name="group_payment"
-                                   attrs="{'invisible': [('wizard_mode', 'not in', ('single_batch', 'multi_batches'))]}"/>
+                                   attrs="{'invisible': [('can_group_payments', '=', False)]}"/>
                         </group>
                         <group name="group2">
                             <label for="amount"
-                                   attrs="{'invisible': ['|', ('wizard_mode', 'not in', ('single_line', 'single_batch')), '&amp;', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', False)]}"/>
+                                   attrs="{'invisible': ['|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"/>
                             <div name="amount_div" class="o_row"
-                                 attrs="{'invisible': ['|', ('wizard_mode', 'not in', ('single_line', 'single_batch')), '&amp;', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', False)]}">
+                                 attrs="{'invisible': ['|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}">
                                 <field name="amount"/>
                                 <field name="currency_id"
                                        options="{'no_create': True, 'no_open': True}"
@@ -48,10 +49,10 @@
                             </div>
                             <field name="payment_date"/>
                             <field name="communication"
-                                   attrs="{'invisible': ['|', ('wizard_mode', 'not in', ('single_line', 'single_batch')), '&amp;', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', False)]}"/>
+                                   attrs="{'invisible': ['|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"/>
                         </group>
                         <group name="group3"
-                               attrs="{'invisible': ['|', ('payment_difference', '=', 0.0), '|', ('wizard_mode', 'not in', ('single_line', 'single_batch')), '&amp;', ('wizard_mode', '=', 'single_batch'), ('group_payment', '=', False)]}"
+                               attrs="{'invisible': ['|', ('payment_difference', '=', 0.0), '|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"
                                groups="account.group_account_readonly">
                             <label for="payment_difference"/>
                             <div>
