[FIX] website_forum: workaround for user profile when there is no "name" for a forum post
In some cases, a forum.post may not have a name.
Then, user profile does not display the link to the post.
We workaround this by at least displaying the post id

--- a/addons/website_forum/views/website_forum.xml
+++ b/addons/website_forum/views/website_forum.xml
@@ -266,7 +266,7 @@
 
             <a t-att-href="click_action"
                 t-attf-class="badge #{tag and tag.name == question_tag.name and 'badge-secondary' or 'border text-600 badge-light'} #{ not question_tag_first and 'ml-lg-1 mt-lg-1'}"
-                t-field="question_tag.name"/>
+                t-field="question_tag.name or question.id"/>
         </t>
     </div>
 
