[FIX] website_blog: fix last update date
wip

task-2180236

--- a/addons/website_blog/views/website_blog_views.xml
+++ b/addons/website_blog/views/website_blog_views.xml
@@ -51,7 +51,7 @@
                     <field name="visits"/>
                     <field name="create_uid" invisible="1"/>
                     <field name="write_uid"/>
-                    <field name="write_date"/>
+                    <field name="last_update_on"/>
                 </tree>
             </field>
         </record>
@@ -83,7 +83,7 @@
                             <field name="create_date" groups="base.group_no_one"/>
                             <field name="post_date"/>
                             <field name="write_uid"/>
-                            <field name="write_date"/>
+                            <field name="last_update_on"/>
                         </group>
                         <group string="Technical" groups="base.group_no_one">
                             <field name="ranking" invisible="1"/>
