--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -171,15 +171,10 @@
         <xpath expr="//div[hasclass('o_wsale_product_btn')]" position="inside">
             <t t-set="product_variant_id" t-value="product._get_first_possible_variant_id()"/>
             <input name="product_id" t-att-value="product_variant_id" type="hidden"/>
-            <t t-if="product_variant_id and not product.virtual_available&lt;0">
-                <a href="#" role="button" id="cart_json" aria-label="Shopping cart" title="Shopping cart" t-attf-class="btn btn-secondary a-submit">
+            <t t-if="product_variant_id">
+                <a href="#" role="button" class="btn btn-secondary a-submit" aria-label="Shopping cart" title="Shopping cart">
                     <span class="fa fa-shopping-cart"/>
                 </a>
-            </t>
-            <t t-else="">
-                <div class="ribbon-wrapper">
-                    <a href="#" role="button" class="ribbon btn" style="background-color: #6C757C; color: #FAFAFB;">Sold out</a>
-                </div>
             </t>
         </xpath>
     </template>
