--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -965,3 +965,9 @@ header {
         background-color: rgba(theme-color('primary'), 0.8);
     }
 }
+
+// Hide google recaptcha V3 don't forget to add legal
+// https://developers.google.com/recaptcha/docs/faq#id-like-to-hide-the-recaptcha-badge.-what-is-allowed
+.grecaptcha-badge {
+    visibility: hidden;
+}
