--- a/addons/l10n_ar/views/account_journal_view.xml
+++ b/addons/l10n_ar/views/account_journal_view.xml
@@ -13,6 +13,9 @@
                 <field name="l10n_ar_afip_pos_partner_id" attrs="{'invisible':['|', '|', ('l10n_latam_country_code', '!=', 'AR'), ('l10n_latam_use_documents', '=', False), ('type', '!=', 'sale')], 'required':[('l10n_latam_country_code', '=', 'AR'), ('l10n_latam_use_documents', '=', True), ('type', '=', 'sale')]}"/>
                 <field name="l10n_ar_share_sequences" attrs="{'invisible':[('l10n_ar_afip_pos_system', '!=', 'II_IM')]}"/>
             </field>
+            <field name="refund_sequence" position="attributes">
+                <attribute name="attrs">{'invisible': ['|', ('type', 'not in', ['sale', 'purchase']), ('l10n_latam_use_documents', '=', True), ('l10n_latam_country_code', '=', 'AR')]}</attribute>
+            </field>
         </field>
     </record>
 
