--- a/addons/account/views/account_journal_dashboard_view.xml
+++ b/addons/account/views/account_journal_dashboard_view.xml
@@ -251,23 +251,23 @@
                         </div>
                         <!-- On the right, show other common informations/actions -->
                         <div id="dashboard_bank_cash_right" class="col-12 col-sm-7 o_kanban_primary_right">
-                            <div class="row">
+                            <div class="row" t-if="dashboard.nb_lines_bank_account_balance > 0">
                                 <div class="col overflow-hidden text-left">
                                     <span title="Balance in General Ledger">Balance in GL</span>
                                 </div>
-                                <div class="col-auto text-right">
+                                <div id="dashboard_bank_cash_balance" class="col-auto text-right">
                                     <span><t t-esc="dashboard.account_balance"/></span>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" t-if="dashboard.nb_lines_outstanding_pay_account_balance > 0">
                                 <div class="col overflow-hidden text-left">
                                     <span title="Outstanding Payments">Outstanding Payments</span>
                                 </div>
-                                <div class="col-auto text-right">
+                                <div id="dashboard_bank_cash_outstanding_balance" class="col-auto text-right">
                                     <span><t t-esc="dashboard.outstanding_pay_account_balance"/></span>
                                 </div>
                             </div>
-                            <t t-if="dashboard.last_balance != dashboard.account_balance">
+                            <t t-if="dashboard.has_at_least_one_statement">
                                 <div class="row" name="latest_statement">
                                     <div class="col overflow-hidden text-left">
                                         <span title="Latest Statement">Latest Statement</span>
