--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -208,6 +208,11 @@
                                             <field name="qty_done" invisible="1"/>
                                             <field name="product_id" invisible="1"/>
                                             <field name="product_uom_id" invisible="1"/>
+                                            <field name="product_uom_qty" invisible="1"/>
+                                            <field name="product_qty" invisible="1"/>
+                                            <field name="state" invisible="1"/>
+                                            <field name="move_id" invisible="1"/>
+                                            <field name="id" invisible="1"/>
                                         </tree>
                                     </field>
 
@@ -249,6 +254,8 @@
                                             <field name="qty_done" invisible="1"/>
                                             <field name="product_id" invisible="1"/>
                                             <field name="product_uom_id" invisible="1"/>
+                                            <field name="product_uom_qty" invisible="1"/>
+                                            <field name="state" invisible="1"/>
                                         </tree>
                                     </field>
 
@@ -290,6 +297,8 @@
                                             <field name="qty_done" invisible="1"/>
                                             <field name="product_id" invisible="1"/>
                                             <field name="product_uom_id" invisible="1"/>
+                                            <field name="product_uom_qty" invisible="1"/>
+                                            <field name="state" invisible="1"/>
                                         </tree>
                                     </field>
 
