--- a/addons/hr_recruitment/views/hr_recruitment_views.xml
+++ b/addons/hr_recruitment/views/hr_recruitment_views.xml
@@ -332,7 +332,7 @@
                                             <field name="legend_done" invisible="1"/>
                                         </div>
                                         <t t-set="unassigned"><t t-esc="_t('Unassigned')"/></t>
-                                        <img t-att-src="kanban_image('res.users', 'image_128', record.user_id.raw_value)" t-att-title="record.user_id.value || unassigned" t-att-alt="record.user_id.value" class="oe_kanban_avatar"/>
+                                        <field name="user_id" widget="many2one_avatar_user"/>
                                     </div>
 
                                 </div>
