[IMP] mass_mailing: add a 'create_date' field in view
This commit will add create_date field in view to display
it as 'Subscription Date' to the user so that concerned people
can know when did the contact subscribed into a mailing list.

Here, now when we will import contacts in mailing.contacts
we are linking the mailing_list in subscription_list_ids
using Command to get the values of create_date.

TaskId-2702607

--- a/addons/mass_mailing/views/mailing_contact_views.xml
+++ b/addons/mass_mailing/views/mailing_contact_views.xml
@@ -146,9 +146,10 @@
                     </group>
                     <field name="subscription_list_ids">
                         <tree editable="bottom">
-                           <field name="list_id"/>
-                           <field name="unsubscription_date"/>
-                           <field name="opt_out"/>
+                            <field name="list_id"/>
+                            <field name="create_date" string="Subscription Date"/>
+                            <field name="unsubscription_date"/>
+                            <field name="opt_out"/>
                         </tree>
                     </field>
                 </sheet>
