--- a/addons/mass_mailing/views/mailing_contact_subscription_views.xml
+++ b/addons/mass_mailing/views/mailing_contact_subscription_views.xml
@@ -16,6 +16,7 @@
                                 aria-label="Blacklisted" invisible="not is_blacklisted" groups="base.group_user"></i>
                             <field name="contact_id"/>
                         </div>
+                        <field name="create_date" string="Subscription Date"/>
                         <field name="unsubscription_date" readonly="1"/>
                         <field name="opt_out"/>
                         <field name="message_bounce" readonly="1"/>
@@ -31,6 +32,7 @@
         <field name="arch" type="xml">
             <tree string="Mailing List Subscriptions">
                 <field name="contact_id"/>
+                <field name="create_date" string="Subscription Date"/>
                 <field name="unsubscription_date"/>
                 <field name="opt_out"/>
                 <field name="message_bounce"/>
